crates/monosecret/src/cli/snapshots/monosecret__cli__tests__format_audit_line_renders_fields.snap
---
source: crates/monosecret/src/cli/mod.rs
expression: snapshot
---
single:
2026-06-07T00:00:00Z  get    found  DB  (demo/prod via dotenv://.env)  reason: deploy  [claude-code]

bulk:
t  run    started  ./deploy.sh  A,B  (demo/prod)
