crates/monosecret/src/cli/snapshots/monosecret__cli__tests__generate_toml_emits_and_round_trips_extends.snap
---
source: crates/monosecret/src/cli/mod.rs
expression: generated
---
[project]
name = "myproj"
revision = "1.0"
extends = ["../shared"]

[profiles.default]
S = { description = "desc" }
