crates/monosecret/src/cli/snapshots/monosecret__cli__tests__generate_toml_none_branch_emits_empty_description_and_omits_fields.snap
---
source: crates/monosecret/src/cli/mod.rs
expression: out
---
[project]
name = "myproj"
revision = "1.0"

# Extend configurations from subdirectories
# extends = [ "subdir1", "subdir2" ]

[profiles.default]
S = { description = "" }
