crates/monosecret/src/cli/snapshots/monosecret__cli__tests__generate_toml_quotes_dotted_secret_name_and_round_trips.snap
---
source: crates/monosecret/src/cli/mod.rs
expression: generated
---
[project]
name = "myproj"
revision = "1.0"

# Extend configurations from subdirectories
# extends = [ "subdir1", "subdir2" ]

[profiles.default]
"FOO.BAR" = { description = "dotted" }
