crates/monosecret/src/cli/snapshots/monosecret__cli__tests__generate_toml_round_trips_control_character.snap
---
source: crates/monosecret/src/cli/mod.rs
expression: generated
---
[project]
name = "myproj"
revision = "1.0"

# Extend configurations from subdirectories
# extends = [ "subdir1", "subdir2" ]

[profiles.default]
S = { description = "a\u007Fb" }
