crates/monosecret/src/cli/snapshots/monosecret__cli__tests__generate_toml_round_trips_values_with_special_chars.snap
---
source: crates/monosecret/src/cli/mod.rs
expression: generated
---
[project]
name = 'weird "name"'
revision = "1.0"

# Extend configurations from subdirectories
# extends = [ "subdir1", "subdir2" ]

[profiles.default]
DATABASE_URL = { description = '''
he said "hi"
then left\''', default = 'a"b\c' }
