crates/monosecret/src/cli/snapshots/monosecret__cli__tests__generate_toml_some_branch_emits_required_and_default.snap
---
source: crates/monosecret/src/cli/mod.rs
expression: out
---
[project]
name = "myproj"
revision = "1.0"

# Extend configurations from subdirectories
# extends = [ "subdir1", "subdir2" ]

[profiles.default]
S = { description = "desc", required = false, default = "v" }
