crates/monosecret/src/cli/snapshots/monosecret__cli__tests__generated_config_with_example_template_is_valid_toml.snap
---
source: crates/monosecret/src/cli/mod.rs
expression: out
---
[project]
name = "myproj"
revision = "1.0"

# Extend configurations from subdirectories
# extends = [ "subdir1", "subdir2" ]

[profiles.default]
S = { description = "desc" }
# DATABASE_URL = { description = "Database connection string", required = true }

[profiles.development]
# Development profile inherits all secrets from default profile
# Only define secrets here that need different values or settings than default
# DATABASE_URL = { default = "sqlite:///dev.db" }
#
# New secrets
# REDIS_URL = { description = "Redis connection URL for caching", required = false, default = "redis://localhost:6379" }
