crates/monosecret/src/cli/snapshots/monosecret__cli__tests__sanitize_field_neutralizes_control_characters.snap
---
source: crates/monosecret/src/cli/mod.rs
expression: "format!(\"clean: {clean}\\nempty: {empty}\\nnewline: {newline}\\ntab: {tab}\\nnul: {nul}\\ndel: {del}\\ninjected: {injected}\")"
---
clean: DATABASE_URL
empty: 
newline: a\x0ab
tab: a\x09b
nul: a\x00b
del: a\x7fb
injected: ok\x1b[2Kforged
